[package]
name = "stryke-mysql-helper"
version = "0.1.1"
edition = "2021"
description = "MySQL / MariaDB bridge binary for the stryke `mysql` package"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-mysql"
homepage = "https://menketechnologies.github.io/stryke-mysql/"
publish = false

[[bin]]
name = "stryke-mysql-helper"
path = "src/main.rs"

[dependencies]
mysql = { version = "28", default-features = false, features = [
    "minimal-rust",
    "buffer-pool",
    "client_ed25519",
] }
clap = { version = "4", default-features = false, features = [
    "std", "derive", "help", "usage", "error-context", "env",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
