[package]
name = "stryke-mysql"
version = "0.18.0"
edition = "2021"
description = "MySQL / MariaDB cdylib for the stryke `mysql` package — dlopened in-process via stryke's FFI bridge, with a persistent mysql::Pool per connection URL"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-mysql"
homepage = "https://menketechnologies.github.io/stryke-mysql/"
publish = false

[lib]
name = "stryke_mysql"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
mysql = { version = "28", default-features = false, features = [
    "minimal-rust",
    "buffer-pool",
    "client_ed25519",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
